--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 
-MONGO_DB_URL = "mongodb+srv://lamido7:lamido7@cluster0.079m2oz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URL = "mongodb+srv://lamido7:lamido7@cluster0.079m2oz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 PORT = 5000
 
